--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 		<script src='http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js'></script>
 		<script src='http://code.jquery.com/ui/1.10.2/jquery-ui.min.js'></script>
 		<script src='http://code.jquery.com/jquery-1.10.2.min.js'></script>
-		
-		<script>
-			$(
-				function() {
-					$("#pageHeader").load("menubar.html");
-				}
-			);
-		</script>
 	</head>
 	
 	<body>
+		<!--
+			<layout>
+			This section contains the primary layout of the page
+			</layout>
+		-->
 		<div id="pageHeader" data-role="header">
+			<script>
+				$(function() { $("#pageHeader").html( $("#menubar").html() ); } );
+			</script>
 			This should not be visible
 		</div>
 		<div id="content" data-role="main" class="ui-content">
@@ -55,6 +55,14 @@
 		</div>
 		<div id="footer" data-role="footer">
 			Neither should this be visible
+		</div>
+		
+		
+		<!--
+			
+		-->
+		<div id="menubar" style="display: none;">
+			 HELLO
 		</div>
 	</body>
 </html>
