removed jquery-mobile local version added cdn script src and stylesheet to index.html

--- a/taskithelp/index.html
+++ b/taskithelp/index.html
@@ -27,10 +27,17 @@
 			}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1">		
-		<link rel="stylesheet" type="text/css" href="jquery-mobile/jquery.mobile-1.4.2.css" />
-		
-		<script src="jquery-mobile/jquery-1.10.2.js"></script>
-		
+		<link
+			rel='stylesheet'
+			type='text/css'
+			href='http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css'></link>
+		<link
+			rel='stylesheet'
+			type='text/css'
+			href='http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css'></link>
+		<script src='http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js'></script>
+		<script src='http://code.jquery.com/ui/1.10.2/jquery-ui.min.js'></script>
+		<script src='http://code.jquery.com/jquery-1.10.2.min.js'></script>		
 
 		<script>
 			var currentPage = 1,
@@ -90,9 +97,6 @@
 				}
 			);
 		</script>
-		
-		<script src="jquery-mobile/jquery.mobile-1.4.2.js"></script>
-		
 	</head>
 	
 	<body>
