deleted some files from taskithelp

--- a/taskithelp/index.html
+++ b/taskithelp/index.html
@@ -671,8 +671,7 @@
 			<img src="taskit-walkthru4.jpg" width="100%"></img>
 			</div>
 			<div data-role="footer">
-				This panel shows a calendar of the current month. The present day will be
-				highlighted in a green box, while days with Deadlines will be highlighted
+				This panel shows a calendar of the current month. Days with Deadlines will be highlighted
 				in Blue while Events will be highlighted in Orange (in the original Mountain theme)
 			</div>
 		</div>
