fixed bug with css sheets @import priorities causing the mobile version to never show.

--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
 			
 			-->
 			<div id="layout_header" data-role="header">
-				<div id="container_menu_desktop" data-role="header" data-mini="true">
+				<div id="container_menu" data-role="header" data-mini="true">
 					<div class="header-menu">
 						<div id="header-menu-controlgroup" class="ui-grid-a">
 							<div class="ui-block-a align-left">
 								<img src="images/zephinzer-studios-logo-400x152px.png"
 									style="max-height: 40px; vertical-align: middle;" />
 							</div>
-							<div class="ui-block-b align-right">
+							<div id="header-menu-links-desktop" class="ui-block-b align-right">
 								<a href="#menu-panel-about"
 									class="menu-link ui-btn ui-btn-icon-left ui-icon-user">About</a>
 								<a href="#menu-panel-social"
@@ -78,17 +78,7 @@
 								<a href="#menu-panel-contact"
 									class="menu-link ui-btn ui-btn-icon-left ui-icon-phone">Contact</a>
 							</div>
-						</div>
-					</div>
-				</div>
-				<div id="container_menu_mobile" data-role="header" data-mini="true">
-					<div class="header-menu">
-						<div id="header-menu-controlgroup" class="ui-grid-a">
-							<div class="ui-block-a align-left">
-								<img src="images/zephinzer-studios-logo-400x152px.png"
-									height="40" style="vertical-align: middle;" />
-							</div>
-							<div class="ui-block-b align-right">
+							<div id="header-menu-links-mobile" class="ui-block-b align-right">
 								<a href="#menu-panel-about"
 									class="menu-link ui-btn ui-btn-icon-notext ui-icon-user">About</a>
 								<a href="#menu-panel-social"
