added back a <div> container causing a bug

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 							</div>
 							1st Runner up at National IT Awareness competition 2004<br />
 							Participant at the National Micromouse Competition 2004/05/06<br />
-							
+						</div>
 					</div>
 				</div>
 
@@ -252,8 +252,6 @@
 					<h1>
 						The Entrepreneur
 					</h1>
-					
-					I have recently tak
 					<div data-role="collapsible" data-mini="true" data-theme="a" class="panel-collapsible">
 						<h1>
 							Mooziq
